--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,14 @@
-{ 
-  "versión" : 2, 
-  "compilaciones" : [ 
-    { 
-      "src" : "server.js" , 
-      "uso" : "@vercel/node" , 
-      "config" : { 
-        "includeFiles" : [ "db.json" ] 
-      } 
-    } 
-  ], 
-  "rutas" : [ 
-    { 
-      "src" : "/(.*)" , 
-      "dest" : "server.js"
-     } 
-  ] 
+{
+  "functions": {
+    "api/server.js": {
+      "memory": 1024,
+      "includeFiles": "db.json"
+    }
+  },
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "api/server.js"
+    }
+  ]
 }
